# lockdep

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  do.sh
src/: condvar.c  main.c  mutex.c  semaphore.c
src/include/: condvar.h  lockdep.h  mutex.h  semaphore.h
src/interpose/: pthread_interpose.c
src/lockdep/: lockdep_core.c
tests/: t01_simple_self_lock.c  t03_nested_deadlock.c  t04_circular_deadlock.c  t05_dining_philosophers.c  t06_dynamic_locks.c  t07_recursive_locks.c  t08_deadlock_avoidance_trylock.c  t09_deadlock_avoidance_timeout.c
